# crop-calculator

./: README.md  pyproject.toml
data/: __init__.py  crop.py  crops.csv  season.py
notes/: 1_git-init.md  2_hydrating-crops.md  README.md
