[tool.poetry]
name = "crop-calculator"
version = "0.1.0"
description = "Stardew Valley calculator inspired by Thorinairs' Stardew Profits tool"
authors = ["Gurthog"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

